# Gdk9

./: AGENTS.md  CHANGELOG.md  Makefile  README.build.md  README.md  _state.json  pipeline.py  pyproject.toml  state.json  subs.json
docs/: CLI.md  DEVELOPER_GUIDELINES.md  GDK9_CORE.md  HANDBOOK.md  PLUGINS.md
gdk9/: __init__.py  ansi.py  argparse  cli.py  crypto.py  energy.py  errors.py  imply.py  io_utils.py  log.py  optimize.py  parser.py  principles.py  state.py  subs.py  sys  tokenize.py  tui.py  utilization.py
gdk9/data/: ninefold.json  official.example.json  official.json  subs.json
gdk9/plugins/: __init__.py  loader.py  registry.py
plugins/: balanced_splits.json  example.yaml  triad_fusions.json
scripts/: make_zip.py
tests/: conftest.py  test_crypto.py  test_energy.py  test_optimize.py  test_plugins.py  test_rules.py  test_rules_commit.py  test_rules_reversibility.py  test_tokenize.py  test_tokenize_metrics.py
